# algo-trader

./: LICENSE  README.md  generate_stats.py  main.py  pyproject.toml  requirements.txt  symbols.txt  trades.json
.github/workflows/: daily-trade.yml
data/clean/: AAPL.csv  ABBV.csv  ABT.csv  ADBE.csv  AMZN.csv  BAC.csv  CMCSA.csv  COST.csv  CRM.csv  CVX.csv  DIS.csv  GOOG.csv  GOOGL.csv  HD.csv  INTC.csv  JNJ.csv  JPM.csv  KO.csv  MCD.csv  META.csv  MRK.csv  MSFT.csv  NFLX.csv  NKE.csv  NVDA.csv  ORCL.csv  PEP.csv  PFE.csv  PG.csv  SPY.csv  T.csv  TSLA.csv  UNH.csv  V.csv  WMT.csv  XOM.csv
data/raw/: AAPL.csv  (+35 more)
report/: fills.csv  fills_with_pnl.csv  monthly_returns_heatmap.csv  per_order_realized_pnl.csv  per_symbol_pnl.csv  per_symbol_realized_pnl.csv
reports/: build_equity.py  generate_quantstats.py  portfolio_daily.csv  qs.html
src/: backtest.py  data_fetch.py  github_util.py  live_trade.py  strategy.py
tests/: commit_trade.py
tools/: update_symbols.py
trades/: 2025-07-30.json  2025-07-30.md  2025-07-31.md  2025-08-03.md  2025-08-04.md  2025-08-05.md  2025-08-06.md  2025-08-07.md  2025-08-08.md  2025-08-10.md  2025-08-11.md  2025-08-12.md  2025-08-13.md  2025-08-14.md  2025-08-17.md  2025-08-18.md  2025-08-19.md  2025-08-20.md  2025-08-21.md  2025-08-24.md  2025-08-25.md  2025-08-26.md  2025-08-27.md  2025-08-28.md  2025-08-31.md  2025-09-01.md  2025-09-02.md  2025-09-03.md  2025-09-04.md  2025-09-07.md  2025-09-10.md  2025-09-11.md  2025-09-14.md  2025-09-15.md  2025-09-16.md  2025-09-17.md  2025-09-18.md  2025-09-21.md  2025-09-22.md  2025-09-23.md  (+66 more)
